traefik/traefik-dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.tekton-argocd.de`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
